# sb-tracker

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
src/sb_tracker/: __init__.py  cli.py
